2004-03-02  JP Rosevear <jpr@ximian.com>

	* gui/Makefile.am: remove conduit dir creation

2004-03-02  Larry Ewing  <lewing@ximian.com>

	* gui/calendar-component.c: add untested start of dnd support for
	source selector.

2004-03-01  Dan Winship  <danw@ximian.com>

	* gui/alarm-notify/alarm-notify.c: fix rampant double-freeing.

2004-03-01  Rodrigo Moya <rodrigo@ximian.com>

	* gui/itip-utils.c (comp_server_send): pass the user list and
	returned icalcomponent to e_cal_send_objects().

2004-03-01  Kidd Wang  <kidd.wang@sun.com>

	* gui/print.c: (print_date_label): ignore the timezone info of all-day
	events.

2004-02-27  JP Rosevear <jpr@ximian.com>

	* gui/gnome-cal.h: remove proto

	* gui/gnome-cal.c (set_query): rename from
	gnome_calendar_set_query and make static

	* gui/e-day-view.h: remove proto for dead function

	* gui/e-day-view.c: guard config.h include

2004-02-26  Rodney Dawes  <dobey@ximian.com>

	* gui/e-meeting-time-sel.c (e_meeting_time_selector_construct):
	Create the arrows in these widgets as GTK_SHADOW_NONE, since the
	default arrow type in GTK+ 2.x is flat triangle arrows, and shadow
	types are generally ignored for arrows anyway, and so we don't look
	ugly with themes that handle shadow types on arrows correctly

2004-02-26  Rodney Dawes  <dobey@ximian.com>

	* gui/alarm-notify/GNOME_Evolution_Calendar_AlarmNotify.server.in.in:
	Fix the repo_id to include the evolution base version

2004-02-26  JP Rosevear <jpr@ximian.com>

	* gui/gnome-cal.c (client_cal_opened_cb): make sure we unref the
	task pad client and the calendar clients are unreffed by the hash
	table

2004-02-24  JP Rosevear <jpr@ximian.com>

	* gui/migration.c (migrate_calendars): fix float type pane
	position keys (we migrated these improperly in the past), just use
	the default value

	Fixes #53087

2004-02-18  Rodrigo Moya <rodrigo@ximian.com>

	* gui/alarm-notify/alarm-notify.c (free_client_hash): remove the client
	from the queue also.
