@@ -1,3 +1,9 @@
+2004-03-02  Rodrigo Moya <rodrigo@ximian.com>
+
+	* gui/cal-search-bar.c: added support for searching the location
+	field also.
+	(regen_query): take into account the new search field.
+
 2004-03-02  JP Rosevear <jpr@ximian.com>
 
 	* gui/Makefile.am: remove conduit dir creation
